--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,25 +6,32 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
-    <ScrollView
-        android:id="@+id/scrollView"
+    <HorizontalScrollView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:layout_constraintTop_toTopOf="parent">
+        android:layout_height="match_parent">
 
-        <vn.vannhat.timelinechart.chart.TimelineChart
-            android:id="@+id/tlcChart"
-            android:layout_width="match_parent"
-            android:layout_height="150dp"
-            app:layout_constraintTop_toTopOf="parent"
-            app:tlcEndHour="24"
-            app:tlcEventMargin="1dp"
-            app:tlcHaftHourHeight="60dp"
-            app:tlcHaftHourLineColor="@color/gray_2"
-            app:tlcHourLabelWidth="65dp"
-            app:tlcHourLineColor="@color/gray_1"
-            app:tlcHourLineHeight="1dp"
-            app:tlcStartHour="0" />
-    </ScrollView>
+        <ScrollView
+            android:id="@+id/scrollView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:layout_constraintTop_toTopOf="parent">
+
+            <vn.vannhat.timelinechart.chart.TimelineChart
+                android:id="@+id/tlcChart"
+                android:layout_width="match_parent"
+                android:layout_height="150dp"
+                app:layout_constraintTop_toTopOf="parent"
+                app:tlcEndHour="24"
+                app:tlcEventMargin="1dp"
+                app:tlcHaftHourHeight="60dp"
+                app:tlcHaftHourLineColor="@color/gray_2"
+                app:tlcHourLabelWidth="65dp"
+                app:tlcHourLineColor="@color/gray_1"
+                app:tlcHourLineHeight="1dp"
+                app:tlcStartHour="0"
+                app:tlcVerticalColumnCount="5"
+                app:tlcVerticalColumnWidth="80dp" />
+        </ScrollView>
+    </HorizontalScrollView>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
